--- a/webPage.html
+++ b/webPage.html
@@ -4,53 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .header {
-        width: 100%;
-        height: 50px;
-        text-align: center;
-        background-color: yellow;
-      }
-      .side-menu {
-        width: 70px;
-        height: 50vh;
-        background-color: green;
-      }
-      .main-content {
-        width: 100%;
-      }
-
-      .container {
-        display: flex;
-      }
-
-      @media screen and (max-width: 480px) {
-        .container {
-          flex-direction: column;
-        }
-      }
-
-      .item {
-        display: flex;
-        gap: 10px;
-        padding: 20px;
-        border-top: 1px solid gray;
-        border-bottom: 1px solid gray;
-      }
-
-      .item-name {
-        width: 20%;
-      }
-
-      .item-subject {
-        width: 80%;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">I am the Header</div>
+    <header class="header">
+      <div style="width: 50%; background-color: green">Logo1</div>
+      <div style="width: 50%; background-color: blue">Logo2</div>
+    </header>
     <div class="container">
-      <header class="side-menu">I am the side menu</header>
+      <div class="side-menu">I am the side menu</div>
       <main class="main-content" id="main">I am the main content Area</main>
     </div>
   </body>
